Incrementing version numbers, fixing jQuery error on IE, Including glyphicons stylesheet and fonts in the repo

--- a/regional-bar/css/glyphicons-1.css
+++ b/regional-bar/css/glyphicons-1.css
@@ -1,7 +1,7 @@
 @font-face {
   font-family: 'Glyphicons Halflings';
-  src: url('/templates/default/fonts/glyphicons-halflings-regular.eot');
-  src: url('/templates/default/fonts/glyphicons-halflings-regular.eot?#iefix') format('embedded-opentype'), url('/templates/default/fonts/glyphicons-halflings-regular.woff') format('woff'), url('/templates/default/fonts/glyphicons-halflings-regular.ttf') format('truetype'), url('/templates/default/fonts/glyphicons-halflings-regular.svg#glyphicons-halflingsregular') format('svg');
+  src: url('../fonts/glyphicons-halflings-regular.eot');
+  src: url('../fonts/glyphicons-halflings-regular.eot?#iefix') format('embedded-opentype'), url('../fonts/glyphicons-halflings-regular.woff') format('woff'), url('../fonts/glyphicons-halflings-regular.ttf') format('truetype'), url('../fonts/glyphicons-halflings-regular.svg#glyphicons-halflingsregular') format('svg');
 }
 
 .glyphicon {
